src/objects/CS_Community_Survey_URL__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>**** Service Cloud Community Survey URL Custom Settings****</description>
    <fields>
        <fullName>CS_Customer_Community_URL__c</fullName>
        <inlineHelpText>Customer Community URL</inlineHelpText>
        <label>Customer Community URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CS_Customer_Survey_Id__c</fullName>
        <description>**** Customer Survey Id ***</description>
        <label>Customer Survey Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Enablement_Survey__c</fullName>
        <description>*** Service Cloud enablement Survey****</description>
        <label>Enablement Survey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Internal_URL__c</fullName>
        <label>Internal URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CS_Partner_Community_URL__c</fullName>
        <description>*** Service Cloud Partner Community URL *****</description>
        <label>Partner Community URL</label>
        <type>Url</type>
    </fields>
    <label>GW Community Survey URL</label>
</CustomObject>